// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a page with next and previous links correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  line-height: 28px;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  color: #001E2B;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  line-height: 13px;
  color: #016BF8;
}

.emotion-1>code {
  color: #016BF8;
}

.emotion-1:focus,
.emotion-1:hover {
  text-decoration-line: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-1:focus {
  text-decoration-color: #016BF8;
  outline: none;
}

.emotion-1:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-2 {
  line-height: 28px;
}

<div
    class="sc-bcXHqe eFamjP"
  >
    <div
      class="sc-gswNZR UJFxm"
    >
      <span
        class="emotion-0"
      >
        ← 
      </span>
      <a
        class="emotion-1 emotion-2"
        href="/drivers/csharp/"
        title="Previous Section"
      >
        MongoDB C#/.NET Driver
      </a>
    </div>
    <div
      class="sc-gswNZR UJFxm"
    >
      <a
        class="emotion-1 emotion-2"
        href="/drivers/java/"
        title="Next Section"
      >
        Java MongoDB Driver
      </a>
      <span
        class="emotion-0"
      >
         →
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders a page with no next link correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  line-height: 28px;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  color: #001E2B;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  line-height: 13px;
  color: #016BF8;
}

.emotion-1>code {
  color: #016BF8;
}

.emotion-1:focus,
.emotion-1:hover {
  text-decoration-line: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-1:focus {
  text-decoration-color: #016BF8;
  outline: none;
}

.emotion-1:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-2 {
  line-height: 28px;
}

<div
    class="sc-bcXHqe eFamjP"
  >
    <div
      class="sc-gswNZR UJFxm"
    >
      <span
        class="emotion-0"
      >
        ← 
      </span>
      <a
        class="emotion-1 emotion-2"
        href="/drivers/go/"
        title="Previous Section"
      >
        MongoDB Go Driver
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders a page with no previous link correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  line-height: 13px;
  color: #016BF8;
}

.emotion-0>code {
  color: #016BF8;
}

.emotion-0:focus,
.emotion-0:hover {
  text-decoration-line: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-0:focus {
  text-decoration-color: #016BF8;
  outline: none;
}

.emotion-0:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-1 {
  line-height: 28px;
}

.emotion-2 {
  line-height: 28px;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  color: #001E2B;
}

<div
    class="sc-bcXHqe eFamjP"
  >
    <div
      class="sc-gswNZR UJFxm"
    >
      <a
        class="emotion-0 emotion-1"
        href="/drivers/go/"
        title="Next Section"
      >
        MongoDB Go Driver
      </a>
      <span
        class="emotion-2"
      >
         →
      </span>
    </div>
  </div>
</DocumentFragment>
`;
